--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navLinks">
                 <a href="index.html" class="links">Quem somos ?</a><br>
                 <a href="newsletter.html" class="links">Newsletter</a>
-                <div class="hambmenu">
+                <div class="hambmenu" onclick="myFunction(this)">
                     <div class="bar1"></div>
                     <div class="bar2"></div>
                     <div class="bar3"></div>
@@ -197,6 +197,12 @@
             Este site foi feito somente para fins educacionais.
         </div>
     </footer>
+
+    <script>
+        function myFunction(x) {
+  x.classList.toggle("change");
+}
+    </script>
 
 </body>
 
