--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
                 <a href="index.html" class="links">Quem somos ?</a><br>
                 <a href="newsletter.html" class="links">Newsletter</a>
                 <div class="hambmenu" onclick="myFunction(this)">
-                    <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                    <details class="detailsNavLinks">
+                    <div class="bar1"><details class="detailsNavLinks">
                         <summary>Nossos Jogos</summary>
                        <ul>
                            <li><a href="#" class="links">Demon's Souls</a></li>
@@ -32,7 +29,9 @@
                            <li><a href="#" class="links">Elden Ring</a></li>
                            <li><a href="#">Armored Core IV: Fires of Rubicon</a></li>
                        </ul> 
-                   </details>
+                   </details></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
                 </div>
             </div>
         </div>
