Adicionando menu hamburguer

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <div id="menu">
             <img src="images/logos/From_Logo.webp" class="fromlogo">
             <div class="navLinks">
-                <a href="index.html" class="links">Quem somos ?</a><br>
-                <a href="newsletter.html" class="links">Newsletter</a>
+               
                 <div class="hambmenu" onclick="myFunction(this)">
                     <div class="bar1"><details class="detailsNavLinks">
                         <summary>Nossos Jogos</summary>
@@ -30,7 +29,10 @@
                            <li><a href="#">Armored Core IV: Fires of Rubicon</a></li>
                        </ul> 
                    </details></div>
-                    <div class="bar2"></div>
+                    <div class="bar2">
+                        <a href="index.html" class="links">Quem somos ?</a><br>
+                        <a href="newsletter.html" class="links">Newsletter</a>
+                    </div>
                     <div class="bar3"></div>
                 </div>
             </div>
