Deixando textos brancos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                            <li><a href="#" class="links">Dark Souls 3</a></li>
                            <li><a href="#" class="links">Sekiro Shadows Die Twice</a></li>
                            <li><a href="#" class="links">Elden Ring</a></li>
-                           <li><a href="#">Armored Core IV: Fires of Rubicon</a></li>
+                           <li><a href="#" class="links">Armored Core IV: Fires of Rubicon</a></li>
                        </ul> 
                    </details></div>
                     <div class="bar2">
