--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
             <div class="navLinks">
                
                 <div class="hambmenu" onclick="myFunction(this)">
-                    <div class="bar1"><details class="detailsNavLinks">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                    
+                        <a href="index.html" class="links">Quem somos ?</a><br>
+                        <a href="newsletter.html" class="links">Newsletter</a>
+                    <details class="detailsNavLinks">
                         <summary>Nossos Jogos</summary>
                        <ul>
                            <li><a href="#" class="links">Demon's Souls</a></li>
@@ -28,12 +34,7 @@
                            <li><a href="#" class="links">Elden Ring</a></li>
                            <li><a href="#" class="links">Armored Core IV: Fires of Rubicon</a></li>
                        </ul> 
-                   </details></div>
-                    <div class="bar2">
-                        <a href="index.html" class="links">Quem somos ?</a><br>
-                        <a href="newsletter.html" class="links">Newsletter</a>
-                    </div>
-                    <div class="bar3"></div>
+                   </details>
                 </div>
             </div>
         </div>
