--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
                
                 <div class="hambmenu" onclick="myFunction(this)">
                     <div class="bar1"></div>
-                    <div class="bar2"></div>
-                    <div class="bar3"></div>
-                    
-                        <a href="index.html" class="links">Quem somos ?</a><br>
+                    <div class="bar2">     <a href="index.html" class="links">Quem somos ?</a><br>
                         <a href="newsletter.html" class="links">Newsletter</a>
                     <details class="detailsNavLinks">
                         <summary>Nossos Jogos</summary>
@@ -34,7 +31,8 @@
                            <li><a href="#" class="links">Elden Ring</a></li>
                            <li><a href="#" class="links">Armored Core IV: Fires of Rubicon</a></li>
                        </ul> 
-                   </details>
+                   </details></div>
+                    <div class="bar3"></div>
                 </div>
             </div>
         </div>
