Mais uma tentativa

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <div class="navLinks">
                
                 <div class="hambmenu" onclick="myFunction(this)">
-                    <div class="bar1"></div>
-                    <div class="bar2">     <a href="index.html" class="links">Quem somos ?</a><br>
+                        <a href="index.html" class="links">Quem somos ?</a><br>
                         <a href="newsletter.html" class="links">Newsletter</a>
                     <details class="detailsNavLinks">
                         <summary>Nossos Jogos</summary>
@@ -31,7 +30,9 @@
                            <li><a href="#" class="links">Elden Ring</a></li>
                            <li><a href="#" class="links">Armored Core IV: Fires of Rubicon</a></li>
                        </ul> 
-                   </details></div>
+                   </details>
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
                     <div class="bar3"></div>
                 </div>
             </div>
