melhorando css e html

--- a/newsletter.html
+++ b/newsletter.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon/teste.ico">
-    <link rel="stylesheet" href="/ProjetoSimone/css/news-style.css" class="rel">
+    <link rel="stylesheet" href="/css/news-style.css" class="rel">
     <title>Inscreva-se na nossa Newsletter</title>
 </head>
 
